@@ -4,13 +4,15 @@ Hash: SHA256
 AUX unoconv-0.3-longer-timeout.patch 554 RMD160 b8007fa78904c8b1495e6e3e202d69bd3c8a43d5 SHA1 2dff02b6348328bdcccd47a6c6c88273b36ccf8f SHA256 44635640d248ff98c2254a5740a74842ebc0e3a83835639e50d3698e4b298f8e
 AUX unoconv-0.3-openoffice-3.2.patch 665 RMD160 e20615496ce3af64ffa2a79e6bdc0e734c093876 SHA1 f85e62b5fa2003ae7f410e4229265a3b79dd29b8 SHA256 564abdb8a08a4bd5332bde9e6eed8ba1d5b064a93136af9949f124a2ad0a9901
 DIST unoconv-0.3.tar.bz2 59623 RMD160 6d3eaac9adcedfa492fb6d15d708e9d96d02e18d SHA1 7e4f5fee9075bec05175a773273506baf9b6c191 SHA256 6e1d0701ce6cedb2b21a1b2945f4f774500c4a10cf9d20a718e7a520f4549051
+DIST unoconv-0.4.tar.bz2 64802 RMD160 cf53514edbdc12ec0d1fb98272323f908e96b906 SHA1 362168001f4653e495ee01d1235ef1a30307ac2f SHA256 29aad1d158989d7c9776a437495a3d67988dbcc0102aa96bcf8b2a9468455d2c
 EBUILD unoconv-0.3-r2.ebuild 776 RMD160 e30c318ae2e8dfc8f12e999913570a48a88961c6 SHA1 cde6a9c801d398ff4d7ce3eba23e14608b5c7ab5 SHA256 f83c6be7ad45e1add9de898065c53d37ab61a0fdf402643fa529d63810b507e6
-MISC ChangeLog 743 RMD160 23fa70dacd14bee86ff1c9b71b4e34d5b20a5c27 SHA1 df03992815529a0fa1a68af3ad9021c235a9c9b2 SHA256 19dd0680cdffab728cb84319b724dd35cdde87325bc4598a211dc74ea58b45d7
+EBUILD unoconv-0.4.ebuild 837 RMD160 70152f071a2bb57fdb408d3dbabf637c54e97c2f SHA1 aefcf29d91b731889095c55a491804cb5456dab3 SHA256 8e94509a9548187b420c2df46f931f95d72878e7fa256257961cff5adfaa54ad
+MISC ChangeLog 859 RMD160 9c747f8f6d07c5932ef589e959aa0942925a53de SHA1 635958ed7d2c5de1af8120067d8306f11425f794 SHA256 8a362b328c7d3ece5eede06a1b67bcdd546ec29b1178d8cc35cfcf1087e96975
 MISC metadata.xml 222 RMD160 c395116c51764efaa671a0f89a7d8992ecbe7304 SHA1 2095e0ced2657346964271e45cc69027b0ccd49d SHA256 0adb6b2a2a8cc78f3d28b8b629db9d9e5731f21da86168ae88eeadc8b82d3225
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAk0CBH4ACgkQppaJjIURYXJFBQEAnxgTahO+izvuMe0+W7QIYU6R
-+xfZqS+jz0zR1PZ1/okA/RGCY21KOXQHBcyb1kzbIrMAyffx5tZqnN2YTZ7+ENuq
-=1f5f
+iF4EAREIAAYFAk0CBlMACgkQppaJjIURYXI3FwD/atwzOzCHONzlw9NXyxGNza1k
+sukLHHZhRY70DAbVS0UA/2zfCHCQm1jQbvsA0W9UV9XollIwI/aY3BsnK0n+7nO5
+=PVvq
 -----END PGP SIGNATURE-----
