@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*unoconv-0.4 (10 Dec 2010)
+
+  10 Dec 2010; Hans de Graaff <graaff@gentoo.org> +unoconv-0.4.ebuild:
+  Version bump.
+
   10 Dec 2010; Hans de Graaff <graaff@gentoo.org> -unoconv-0.3.ebuild,
   -unoconv-0.3-r1.ebuild, files/unoconv-0.3-longer-timeout.patch,
   files/unoconv-0.3-openoffice-3.2.patch, metadata.xml:
